# Phenotype-Drug-Discovery

./: .gitignore  .gitignore.swo  README.md
CellAutoFM/: README.md  environment.yml  main.py  pyproject.toml
CellAutoFM/data/: compound_web_pred.csv  experiment_embedding_data_tif.json  experiment_embedding_data_tif2.json  experiment_embedding_data_tif3.json  top.results.csv
CellAutoFM/data/experimental_images/1/: 1_1.tif  1_2.tif  1_Merge.tif
CellAutoFM/data/experimental_images/10/: 10_1.tif  10_2.tif  10_Merge.tif
CellAutoFM/data/experimental_images/100/: 100_1.tif  100_2.tif  100_Merge.tif
CellAutoFM/data/experimental_images/101/: 101_1.tif  101_2.tif  101_Merge.tif
CellAutoFM/data/experimental_images/102/: 102_1.tif  102_2.tif  102_Merge.tif
CellAutoFM/data/experimental_images/103/: 103_1.tif  103_2.tif  103_Merge.tif
CellAutoFM/data/experimental_images/104/: 104_1.tif  104_2.tif  104_Merge.tif
CellAutoFM/data/experimental_images/105/: 105_1.tif  105_2.tif  105_Merge.tif
CellAutoFM/data/experimental_images/106/: 106_1.tif  106_2.tif  106_Merge.tif
CellAutoFM/data/experimental_images/107/: 107_1.tif  107_2.tif  107_Merge.tif
CellAutoFM/data/experimental_images/108/: 108_1.tif  108_2.tif  108_Merge.tif
CellAutoFM/data_preparation/: training_data_preparation.py
CellAutoFM/model_training/: lora_training_ViT.py
CellAutoFM/models/vit-large-autophagy-lora/: README.md  adapter_config.json
CellAutoFM/unsupervised_compound_selection/: image_representation_generation.py  unsupervised_compound_selection_based_on_representation.ipynb
(+398 files in other folders)
